fix: removed extra padding

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,7 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 100px;
+    padding-top: 20px;
     padding-bottom: 20px;
   }
 
